Bug 127934 - Languages missing in spellchecker settings
Summary: Languages missing in spellchecker settings
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: flake-texttool-plugins (other bugs)
Version First Reported In: 1.5 or before
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
: 136121 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-05-24 14:03 UTC by Jaakko Holster
Modified: 2009-10-02 23:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaakko Holster 2006-05-24 14:03:47 UTC
Version:           1.5.0 (using KDE 3.5.2, Kubuntu Package 4:3.5.2-0ubuntu18 dapper)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-22-686

I have Finnish language installed for ispell. I've configured the KDE spellchecker in kcontrol and it works greatly in KDE applications. However, I'm not able to use Finnish spellchecking in kword. Kword seems to have its own spellchecker configuration and there's only English variations (EN_xx) available. I tried to wipe out koffice/kword rc files under ~/.kde, which didn't help.
Comment 1 David Faure 2006-05-24 23:20:35 UTC
Could this be the reason?   http://bugs.kde.org/show_bug.cgi?id=91581
Comment 2 Jaakko Holster 2006-05-25 00:02:49 UTC
Bug 91581 is aspell related, but I'm using ispell. The Finnish dictionary file is located under /usr/lib/ispell/ and is listed in kcontrol when using ispell as a client.

My guess: kword uses aspell, not ispell, while other KDE apps uses the client configured in kcontrol? If so, why kword doesn't use the "standard" solution?
Comment 3 David Faure 2006-05-26 11:06:38 UTC
No, no, kword uses kspell2, which is a new kde library around both ispell and aspell dictionaries.
But the rest of KDE uses the older kspell1 library, which has a huge number of issues, but was, well,
around for longer, so they both have bugs but not the same.

Sorry that I didn't notice the difference (ispell/aspell) between the two bug reports; must be another
problem indeed, then. Your problem must be in kspell2's handling of ispell dictionaries, but
I have no idea where to begin looking... Zack might know...
Comment 4 Bram Schoenmakers 2006-10-20 19:21:27 UTC
*** Bug 136044 has been marked as a duplicate of this bug. ***
Comment 5 Bram Schoenmakers 2006-10-22 13:33:30 UTC
*** Bug 136121 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Zander 2009-10-02 23:42:44 UTC
SVN commit 1030665 by zander:

Fixes app-wide language changes to be honoured by the speller.

Remove the koffice-local clone of the config dialog and use the one
from kdeui instead.
Also listen to the language change and store that in our apps config
file and restore that properly on restart.

BUG:127934
BUG:117567
CCBUG:208003
BUG:189287

 M  +7 -2      BgSpellCheck.cpp  
 M  +3 -0      BgSpellCheck.h  
 M  +0 -5      CMakeLists.txt  
 M  +13 -6     SpellCheck.cpp  
 M  +1 -1      SpellCheck.h  
 D             SpellCheckConfig.ui  
 D             SpellCheckConfigDialog.cpp  
 D             SpellCheckConfigDialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1030665