Fixes app-wide language changes to be honoured by the speller.

Remove the koffice-local clone of the config dialog and use the one
from kdeui instead.
Also listen to the language change and store that in our apps config
file and restore that properly on restart.

BUG:127934
BUG:117567
CCBUG:208003
BUG:189287

svn path=/trunk/koffice/; revision=1030665